--- a/package.json
+++ b/package.json
@@ -8,9 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.16",
+    "axios": "^1.5.1",
+    "axios-https-proxy-fix": "^0.17.1",
+    "cookies": "^0.8.0",
     "core-js": "^3.6.5",
+    "crypto-js": "^4.1.1",
+    "dotenv": "^16.3.1",
+    "js-cookie": "^3.0.5",
+    "laravel-echo": "^1.15.3",
+    "pusher-js": "^8.3.0",
     "vue": "^3.0.0",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.17",
