--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "core-js": "^3.6.5",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
+    "fedapay": "^1.1.10",
     "js-cookie": "^3.0.5",
+    "kkiapay": "^2.0.24",
     "laravel-echo": "^1.15.3",
+    "noty": "^3.2.0-beta-deprecated",
     "pusher-js": "^8.3.0",
     "vue": "^3.0.0",
     "vue-router": "^4.2.5",
