--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pusher-js": "^8.3.0",
     "vue": "^3.0.0",
     "vue-router": "^4.2.5",
+    "vue-select": "^4.0.0-beta.6",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
